finished the task>

--- a/AppIT - InterviewTask/AppIT - InterviewTask/Views/List/GetList.cshtml
+++ b/AppIT - InterviewTask/AppIT - InterviewTask/Views/List/GetList.cshtml
@@ -49,13 +49,17 @@
 
 <form id="frm" asp-action = "Calculation" method="post">
        <div class="form-actions no-color">
-            <h4>Press the button to calculate fees</h4>
-            <input type="submit" value="Calculation" class="btn btn-primary" />
+            <h4>Press the button for detail view </h4>
+            <input type="submit" value="DetailView" class="btn btn-primary" />
         </div>
 </form>
 
-
-
+<form id="frm1" asp-action = "CalculationFee" method="post">
+       <div class="form-actions no-color">
+            <h4>Press the button to calculate fees</h4>
+            <input type="submit" value="CalculationFee" class="btn btn-warning" />
+        </div>
+</form>
 
 
 
